<resources>
    <string name="app_name">LearnJava</string>
    <string name="go_to_quiz">Go To Quiz</string>
    <string name="go_home">Go Home</string>
    <string name="todo">TODO</string>
    <string name="java_course">Java Course</string>
    <string name="go_to_tutorial">Go To Tutorial</string>
    <string name="button">Button</string>
    <string name="how_do_you_write_single_line_comments">How do you write Single Line Comments?</string>
    <string name="_0_10">0/10</string>
    <string name="test">test</string>
    <string name="_0_3">0/3</string>
    <string name="submit">Submit</string>
    <string name="congratulations">Congratulations!</string>
    <string name="share_progress">Share Progress</string>
    <string name="textview">TextView</string>
    <string name="continue1">Continue</string>
</resources>