<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".view.QuizActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/backAnimationQuizActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_url="https://assets10.lottiefiles.com/packages/lf20_mfm2v4hs.json" />

        <TextView
            android:id="@+id/textViewQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/how_do_you_write_single_line_comments"
            android:textColor="@color/ugly_green"
            android:textSize="22sp" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/quizAnimation"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_url="https://assets9.lottiefiles.com/packages/lf20_cf2kl3pu.json" />

        <LinearLayout
            android:id="@+id/linearLayoutProgressDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <ProgressBar
                android:id="@+id/progressBarQuiz"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="3"
                android:minHeight="50dp"
                android:progress="0"
                android:indeterminate="false"
                style="?android:attr/progressBarStyleHorizontal"/>
            
            <TextView
                android:id="@+id/textViewProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="15dp"
                android:textSize="14sp"
                android:text="@string/_0_3"/>



        </LinearLayout>

        <TextView
            android:id="@+id/textViewOptionOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/option_border"
            android:gravity="center"
            android:padding="15dp"
            android:textSize="18sp"
            android:text="@string/test"/>
        <TextView
            android:id="@+id/textViewOptionTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/option_border"
            android:gravity="center"
            android:padding="15dp"
            android:textSize="18sp"
            android:text="@string/test"/>
        <TextView
            android:id="@+id/textViewOptionThree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/option_border"
            android:gravity="center"
            android:padding="15dp"
            android:textSize="18sp"
            android:text="@string/test"/>
        <TextView
            android:id="@+id/textViewOptionFour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/option_border"
            android:gravity="center"
            android:padding="15dp"
            android:textSize="18sp"
            android:text="@string/test"/>

        <Button
            android:id="@+id/submitButtonQuiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="@color/green"
            android:textSize="24sp"
            android:text="@string/submit"
            />

    </LinearLayout>

</ScrollView>